test/types/records/init/generic/mismatch.good
mismatch.chpl:16: error: type mismatch in assignment from A(real(64)) to A(int(64))
